unpackaged/main/default/objects/ResourceAbsence/fields/Absence_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Absence_Activity_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Absence Activity Type</label>
    <referenceTo>Absence_Activity_Type__c</referenceTo>
    <relationshipLabel>Technician Absences</relationshipLabel>
    <relationshipName>Technician_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>