unpackaged/main/default/objects/ResourceAbsence/fields/Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Activity_Code__c</fullName>
    <label>Activity Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E106</fullName>
            </value>
            <value>
                <fullName>E105</fullName>
            </value>
            <value>
                <fullName>E104</fullName>
            </value>
            <value>
                <fullName>E103</fullName>
            </value>
            <value>
                <fullName>L931</fullName>
            </value>
            <value>
                <fullName>L930</fullName>
            </value>
            <value>
                <fullName>L923</fullName>
            </value>
            <value>
                <fullName>L920</fullName>
            </value>
            <value>
                <fullName>L907</fullName>
            </value>
            <value>
                <fullName>L911</fullName>
            </value>
            <value>
                <fullName>L909</fullName>
            </value>
            <value>
                <fullName>L908</fullName>
            </value>
            <value>
                <fullName>L924</fullName>
            </value>
            <value>
                <fullName>L912</fullName>
            </value>
            <value>
                <fullName>L900</fullName>
            </value>
            <value>
                <fullName>L905</fullName>
            </value>
            <value>
                <fullName>L902</fullName>
            </value>
            <value>
                <fullName>L903</fullName>
            </value>
            <value>
                <fullName>L906</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>