unpackaged/main/default/objects/ResourceAbsence/fields/IntErrorResponse__c.field-meta.xml
<CustomField>
    <fullName>IntErrorResponse__c</fullName>
    <label>IntErrorResponse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>