unpackaged/main/default/objects/ResourceAbsence/fields/Is_Processed_CP__c.field-meta.xml
<CustomField>
    <fullName>Is_Processed_CP__c</fullName>
    <label>Is Processed CP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>