unpackaged/main/default/objects/ResourceAbsence/fields/NABU__c.field-meta.xml
<CustomField>
    <fullName>NABU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NABU</label>
    <referenceTo>NABU__c</referenceTo>
    <relationshipLabel>Technician Absences</relationshipLabel>
    <relationshipName>Technician_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>