unpackaged/main/default/objects/ResourceAbsence/fields/Public_Comments__c.field-meta.xml
<CustomField>
    <fullName>Public_Comments__c</fullName>
    <label>Public Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>