unpackaged/main/default/objects/ResourceAbsence/fields/Recurrence_Key__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Key__c</fullName>
    <label>Recurrence Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>