unpackaged/main/default/objects/ResourceAbsence/fields/Recurrence_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Status__c</fullName>
    <label>Recurrence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>