unpackaged/main/default/objects/ResourceAbsence/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceTerritory.Name</field>
            <operation>notContain</operation>
            <value>US</value>
        </filterItems>
        <filterItems>
            <field>ServiceTerritory.Name</field>
            <operation>notContain</operation>
            <value>CAN</value>
        </filterItems>
        <filterItems>
            <field>ServiceTerritory.ParentTerritory.Name</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>ServiceTerritory.ParentTerritory.Name</field>
            <operation>notContain</operation>
            <value>ZZ Do Not Use</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Technician Absences</relationshipLabel>
    <relationshipName>Technician_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>