unpackaged/main/default/objects/ResourceAbsence/validationRules/Cannot_modify_IsProccess_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_modify_IsProccess_2</fullName>
    <active>true</active>
    <description>Cannot modify NA when Is Process = 2</description>
    <errorConditionFormula>AND(TEXT(Is_Processed__c) = &#39;2&#39;,
OR(
ISCHANGED(Start),
ISCHANGED(End),
ISCHANGED(Absence_Activity_Type__c ),
ISCHANGED( Type )
))</errorConditionFormula>
    <errorMessage>Can no longer make modifications as already processed</errorMessage>
</ValidationRule>