unpackaged/main/default/objects/ResourceAbsence/validationRules/Contractor_Blocker.validationRule-meta.xml
<ValidationRule>
    <fullName>Contractor_Blocker</fullName>
    <active>true</active>
    <description>Contractor cannot have vacation or On-Call blocker</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(Resource.EngineerType__c ,&quot;BIR Contractor&quot;),
ISPICKVAL(Resource.EngineerType__c ,&quot;FLM Contractor&quot;)
),
OR(
   TEXT(Type) = &quot;On Call US Per Day Fixed Rate&quot;,
   TEXT(Type) = &quot;On Call US - Weekday &amp; Weekend&quot;,
   TEXT(Type) = &quot;On Call Weekday - Paid CAN&quot;,
   TEXT(Type) = &quot;On Call Weekend and Holidays - Paid CAN&quot;
   )
)</errorConditionFormula>
    <errorMessage>Contractor does not get On-Call; it should be a Standby ticket</errorMessage>
</ValidationRule>